crates/frontend/samples/test7.out
error: failed to prove 0x12b00f6d0: Tuple(0x12b00f700: [0x12b00f7c8: Universal(0x12b00f7f8: TypeGeneric { ident: Ident { span: <dummy>, text: "Self"#25, raw: false }, user_clauses: 0x12b014598: [Trait(TraitSpec { def: "Foo"#22, params: 0x12b00f620: [Equals(Ty(0x12b00f658: Universal(0x12b00f728: TypeGeneric { ident: Ident { span: crates/frontend/samples/test7.fir:47:14-17, text: "Bar"#24, raw: false }, user_clauses: 0x12b00f688: [Trait(TraitSpec { def: "Foo"#22, params: 0x12b00f6b0: [Equals(Ty(0x12b00f6d0))] })], is_synthetic: true, .. })))] })], is_synthetic: true, .. })]) implements TraitSpec { def: "Foo"#22, params: 0x12b014520: [Equals(Ty(0x12b014540: Tuple(0x12b014570: [0x12b00f658: Universal(0x12b00f728: TypeGeneric { ident: Ident { span: crates/frontend/samples/test7.fir:47:14-17, text: "Bar"#24, raw: false }, user_clauses: 0x12b00f688: [Trait(TraitSpec { def: "Foo"#22, params: 0x12b00f6b0: [Equals(Ty(0x12b00f6d0: Tuple(0x12b00f700: [0x12b00f7c8: Universal(0x12b00f7f8: TypeGeneric { ident: Ident { span: <dummy>, text: "Self"#25, raw: false }, user_clauses: 0x12b014598: [Trait(TraitSpec { def: "Foo"#22, params: 0x12b00f620: [Equals(Ty(0x12b00f658))] })], is_synthetic: true, .. })])))] })], is_synthetic: true, .. })])))] }
   ┌─ crates/frontend/samples/test7.fir:47:29
   │
47 │         type Bar: Foo<Bar = (Self,)>;
   │                             ^^^^^^^
